clusters/cl01tl/manifests/intel-device-plugin/Namespace-intel-device-plugin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intel-device-plugin
  labels:
    app.kubernetes.io/name: intel-device-plugin
    app.kubernetes.io/instance: intel-device-plugin
    app.kubernetes.io/part-of: intel-device-plugin
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
