clusters/cl01tl/manifests/intel-device-plugin/Service-inteldeviceplugins-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: inteldeviceplugins-controller-manager-metrics-service
  namespace: "intel-device-plugin"
spec:
  ports:
    - name: https
      port: 8443
      targetPort: https
  selector:
    control-plane: controller-manager
