clusters/cl01tl/manifests/intel-device-plugin/Service-inteldeviceplugins-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inteldeviceplugins-webhook-service
  namespace: "intel-device-plugin"
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    control-plane: controller-manager
